# deepsearch

./: .env.example  .gitignore  AGENTS.md  README.md  WEB_UI_COMPLETE.md  WEB_UI_README.md  config.py  llm_factory.py  main.py  pyproject.toml  requirements.txt  research_agent.py  research_agent_v2.py  research_agent_v3.py  research_agent_v4.py  web_ui.py  web_ui_modern.html  web_ui_modern.py
static/: web_ui_modern.css  web_ui_modern.js
